--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,8 +45,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:21.0.1'
 
     //Scalable Size Unit (support for different screen sizes)
-    implementation 'com.intuit.sdp:sdp-android:1.1.0'
-    implementation 'com.intuit.ssp:ssp-android:1.1.0'
+//    implementation 'com.intuit.sdp:sdp-android:1.1.0'
+//    implementation 'com.intuit.ssp:ssp-android:1.1.0'
 
     implementation "androidx.room:room-runtime:2.4.3"
     annotationProcessor "androidx.room:room-compiler:2.4.3"
