--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "de.uhh.detectives.frontend"
-        minSdk 29
+        minSdk 24
         targetSdk 32
         versionCode 1
         versionName "1.0"
@@ -43,6 +43,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation 'com.mapbox.maps:android:10.9.1'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation("org.greenrobot:eventbus:3.3.1")
 
     //Scalable Size Unit (support for different screen sizes)
 //    implementation 'com.intuit.sdp:sdp-android:1.1.0'
