--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Frontend"
         tools:targetApi="31">
+        <service android:name="de.uhh.detectives.frontend.service.TcpMessageService" android:stopWithTask="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
