--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation 'com.mapbox.maps:android:10.9.1'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
-    implementation("org.greenrobot:eventbus:3.3.1")
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'org.greenrobot:eventbus:3.3.1'
 
     //Scalable Size Unit (support for different screen sizes)
 //    implementation 'com.intuit.sdp:sdp-android:1.1.0'
