frontend-13: This is a big one. added WaitingRoomActivity. Now works with Server to get all the information on StartGame.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
         <activity
             android:name=".LoginActivity"
             android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".WaitingRoomActivity"
+            android:windowSoftInputMode="adjustResize" />
     </application>
 
 </manifest>
