--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     namespace 'de.uhh.detectives.frontend'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "de.uhh.detectives.frontend"
-        minSdk 29
-        targetSdk 32
+        minSdk 30
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -43,6 +43,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.5.3'
     implementation 'com.mapbox.maps:android:10.9.1'
     implementation 'com.google.android.gms:play-services-location:21.0.1'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.karumi:dexter:6.2.3'
+    implementation("org.greenrobot:eventbus:3.3.1")
 
     //Scalable Size Unit (support for different screen sizes)
 //    implementation 'com.intuit.sdp:sdp-android:1.1.0'
