--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,25 +16,31 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Frontend"
         tools:targetApi="31">
+        <receiver
+            android:name=".location.GeofenceBroadcastReceiver"
+            android:enabled="true"
+            android:exported="true" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyBXIQ2LfZOV2vmeQA7s2LI5QI8M6fIIaDc" />
+
+        <activity
+            android:name=".SplashActivity"
+            android:exported="true"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyBXIQ2LfZOV2vmeQA7s2LI5QI8M6fIIaDc" />
-
-        <receiver
-            android:name=".location.GeofenceBroadcastReceiver"
-            android:enabled="true"
-            android:exported="true" />
     </application>
 
 </manifest>
