--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,12 +38,14 @@
         </activity>
         <activity
             android:name=".GameActivity"
+            android:theme="@style/Theme.Frontend"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".LoginActivity"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".WaitingRoomActivity"
+            android:theme="@style/Theme.Frontend"
             android:windowSoftInputMode="adjustResize" />
     </application>
 
