--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,8 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.3.1'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
     implementation 'com.karumi:dexter:6.2.3'
-    implementation("org.greenrobot:eventbus:3.3.1")
+    implementation 'org.greenrobot:eventbus:3.3.1'
+    implementation 'com.google.code.gson:gson:2.10'
 
     //Scalable Size Unit (support for different screen sizes)
 //    implementation 'com.intuit.sdp:sdp-android:1.1.0'
