--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
 
     <application
         android:allowBackup="false"
@@ -17,7 +18,7 @@
         tools:targetApi="31">
         <service android:name="de.uhh.detectives.frontend.service.TcpMessageService" android:stopWithTask="true" />
         <receiver
-            android:name=".geofence.service.GeofenceBroadcastReceiver"
+            android:name=".geofence.service.mapservices.MapGeofenceBroadcastReceiver"
             android:enabled="true"
             android:exported="true" />
         <meta-data
@@ -43,7 +44,7 @@
             android:name=".LoginActivity"
             android:windowSoftInputMode="adjustResize" />
         <activity
-            android:name=".waitingroom.WaitingRoomActivity"
+            android:name=".WaitingRoomActivity"
             android:windowSoftInputMode="adjustResize" />
     </application>
 
