frontend-32: added better alertdialog and window popup on death. setup new ghost activity (going to add stuff to it after this). moved receive EndGameMessage to GameActivity and GameGhostActivity so it can close the activity when going back to login.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,10 @@
                 android:value="" />
         </activity>
         <activity
+            android:name=".GameGhostActivity"
+            android:theme="@style/Theme.Frontend"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
             android:name=".GameActivity"
             android:theme="@style/Theme.Frontend"
             android:windowSoftInputMode="adjustResize" />
