--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         tools:targetApi="31">
         <service android:name="de.uhh.detectives.frontend.service.TcpMessageService" android:stopWithTask="true" />
         <receiver
-            android:name=".geofence.service.mapservices.MapGeofenceBroadcastReceiver"
+            android:name=".geofence.service.GeofenceBroadcastReceiver"
             android:enabled="true"
             android:exported="true" />
         <meta-data
